Added related work, Prof. Brown's changes.

--- a/ICCV/egbib.bib
+++ b/ICCV/egbib.bib
@@ -1,44 +1,130 @@
-
-@misc{Authors14,
- author = {Authors},
- title = {The frobnicatable foo filter},
- note = {Face and Gesture  submission ID 324. Supplied as additional material {\tt fg324.pdf}},
- year = 2014
+@inproceedings{Lhuillier,
+year={2001},
+author = {Lhuillier, M. and Quan, L. and Shum, H. and Tsui, H.T.},
+title = {Relief Mosaics by Joint View Triangulation},
+booktitle ={CVPR},
+publisher = {IEEE}
 }
 
-@misc{Authors14b,
- author = {Authors},
- title = {Frobnication tutorial},
- note = {Supplied as additional material {\tt tr.pdf}},
- year = 2014
+@inproceedings{Gao,
+year={2011},
+author = {Junhong Gao and Seon Joo Kim and Brown, M.S.},
+title = {Constructing image panoramas using dual-homography warping},
+booktitle ={CVPR},
+publisher = {IEEE}
 }
 
-@article{Alpher02,
-author = {A. Alpher},
-title = {Frobnication},
-journal = {Journal of Foo},
-volume = 12, 
-number = 1, 
-pages = {234--778}, 
-year = 2002
+@inproceedings{Acha,
+year={2005},
+author = {Rav-Acha, A. and Pritch, Y. and Lischinski, D. and Peleg, S.},
+title = {Dynamosaics: video mosaics with non-chronological time},
+booktitle ={CVPR},
+publisher = {IEEE}
 }
 
-@article{Alpher03,
-author = {A. Alpher and  J.~P.~N. Fotheringham-Smythe},
-title = {Frobnication revisited},
-journal = {Journal of Foo},
-volume = 13, 
-number = 1, 
-pages = {234--778}, 
-year = 2003
+@inproceedings{Eden,
+year={2006},
+author = {Eden, A. and Uyttendaele, M. and Szeliski, R.},
+title = {Seamless Image Stitching of Scenes with Large Motions and Exposure Differences},
+booktitle ={CVPR},
+publisher = {IEEE}
 }
 
-@article{Alpher04,
-author = {A. Alpher and J.~P.~N. Fotheringham-Smythe and G. Gamow},
-title = {Can a machine frobnicate?},
-journal = {Journal of Foo},
-volume = 14, 
-number = 1, 
-pages = {234--778}, 
-year = 2004
+@inproceedings{Peleg,
+year={1999},
+author = {Peleg, S. and  Ben-Ezra, M.},
+title = {Stereo panorama with a single camera},
+booktitle ={CVPR},
+publisher = {IEEE}
+}
+
+@inproceedings{Capel,
+year={1998},
+author = {Capel, D. and Zisserman, A.},
+title = {Automated mosaicing with super-resolution zoom},
+booktitle ={CVPR},
+publisher = {IEEE}
+}
+
+@inproceedings{Szeliski1997,
+ author = {Szeliski, R and Shum, Heung-Yeung},
+ title = {Creating Full View Panoramic Image Mosaics and Environment Maps},
+ booktitle = {SIGGRAPH},
+ series = {SIGGRAPH '97},
+ year = {1997},
+ pages = {251--258},
+ numpages = {8},
+}
+
+@TECHREPORT{Szeliski05imagealignment,
+    author = {Richard Szeliski},
+    title = {Image alignment and stitching: A tutorial},
+    institution = {MSR-TR-2004-92, Microsoft Research, 2004},
+    year = {2005}
+}
+
+@inproceedings{Brown,
+year={2003},
+author = {Brown, M. ; Lowe, D.G.},
+title = {Recognising panoramas},
+booktitle ={ICCV},
+publisher = {IEEE}
+}
+
+@article{Brown07,
+year={2007},
+journal={International Journal of Computer Vision},
+volume={74},
+number={1},
+title={Automatic Panoramic Image Stitching using Invariant Features},
+author={Brown, M and Lowe, D. G.},
+pages={59-73},
+}
+ 
+@article{Agarwala2006,
+ author = {Agarwala, A and Agrawala, M and Cohen, M and Salesin, D and Szeliski, R},
+ title = {Photographing Long Scenes with Multi-viewpoint Panoramas},
+ journal = {ACM Transactions on Graphics},
+ volume = {25},
+ number = {3},
+ month = jul,
+ year = {2006},
+ pages = {853--861},
+ numpages = {9},
+ publisher = {ACM}
+} 
+
+@article{Milgram1975,
+author= {Milgram, D.L.},
+title = {Computer Methods for Creating Photomosaics},
+journal = {IEEE Transactions on Computers},
+year = {1975},
+volumme = {C-24},
+number = {11},
+pages = {1113--1119}
+} 
+
+@article{Milgram1977,
+author= {Milgram, D.L.},
+title = {Adaptive techniques for photomosaicking},
+journal = {IEEE Transactions on Computers},
+year = {1977},
+volumme = {26},
+number = {11},
+pages = {1175--1180}
+}
+
+@MISC{ICE,
+author = "{Microsoft Image Composite Editor}",
+howpublished={\url{http://research.microsoft.com/en-us/um/redmond/groups/ivm/ICE/}}
+}
+
+@MISC{autostitch,
+author = "{Autostich}",
+howpublished={\url{http://www.cs.bath.ac.uk/brown/autostitch/autostitch.html}}
+}
+
+@MISC{photoshop,
+author = "{Adobe Photoshop CS6}",
+howpublished={\url{http://www.adobe.com/products/photoshop}}
 }
