--- a/ICCV/experiments_results.tex
+++ b/ICCV/experiments_results.tex
@@ -120,30 +120,12 @@ environment with some natural light.  The input stream had about 4300
 images. The selection algorithm pruned the video into N=4 images. A
 sample of the selected images are seen in Figure~\ref{fig:idc_selected}
 
-\begin{figure}
-\centering
-\includegraphics[width=0.22\linewidth]{figures/idc_indoor/selected/1.jpg}
-\includegraphics[width=0.22\linewidth]{figures/idc_indoor/selected/2.jpg}
-\includegraphics[width=0.22\linewidth]{figures/idc_indoor/selected/3.jpg}
-\includegraphics[width=0.22\linewidth]{figures/idc_indoor/selected/4.jpg}
-\caption{Pruned images from a video of an indoor scene.}
-\label{fig:idc_selected}
-\end{figure}
-
 There were two disconnected components in the resulting graph.
 Autostitch was unable to produce any reasonable output as seen in
 Figure~\ref{fig:idc_indoor_comparison}.  The ground truth can be seen
 in Figure~\ref{fig:idc_indoor_groundtruth}.  One can see a better
 orthographic view of the posters in a composite manner.
 
-
-\begin{figure}[p]
-\includegraphics[width=\linewidth]{figures/idc_indoor/groundtruth.jpg}
-\caption{Ground truth of the indoor scene.  There is a substantial gap
-  in between the two posters, and this dead space confuses state of the
-  art stitchers since they do not find features.}
-\label{fig:idc_indoor_groundtruth}
-\end{figure} 
 
 Figure \ref{fig:idc_indoor_comparison} shows the comparison of outputs of state
 of the art stitchers with output of our algorithm. 
@@ -178,33 +160,8 @@ input stream had about 12000 images. The selection algorithm pruned the video
 into N=30 images. A sample of the selected images are seen in Figure
 \ref{fig:green_red_selected}.
 
-\begin{figure}
-\centering
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/1.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/2.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/3.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/4.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/5.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/6.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/7.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/8.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/9.jpg}
-\includegraphics[width=0.19\linewidth]{figures/green_red/selected/10.jpg}
-\caption{Sample selected images of outdoor scene by our algorithm.}
-\label{fig:green_red_selected}
-\end{figure}
-
 The ground truth of outdoor scene can be seen in Figure
 \ref{fig:green_red_groundtruth}.
-
-\begin{figure}
-\includegraphics[width=\linewidth]{figures/green_red/groundtruth.jpg}
-\caption{Ground truth of the outdoor scene captured by quadcopter. There is
-visible gap in between two posters which will cause problems for state of the art
-stitchers.}
-\label{fig:green_red_groundtruth}
-\end{figure}
-
 
 \begin{figure*}
 \begin{subfigure}[b]{0.45\textwidth}
@@ -225,6 +182,34 @@ output is able to shows individual panoramas at their respective location
 approximately}
 \label{fig:green_red_comparison}
 \end{figure*}
+
+\begin{table*}
+\begin{tabular}{l|cc}
+\hline 
+ & Indoor &  Outdoor \\
+\hline 
+ Input sequence &
+ \includegraphics[width=0.3\textwidth]{figures/idc_indoor/groundtruth.jpg} &
+ \includegraphics[width=0.3\textwidth]{figures/green_red/groundtruth.jpg} \\
+\hline
+ Selected Images & 	\includegraphics[width=0.22\textwidth]{figures/idc_indoor/selected/1.jpg}
+\includegraphics[width=0.22\textwidth]{figures/idc_indoor/selected/2.jpg}
+\includegraphics[width=0.22\textwidth]{figures/idc_indoor/selected/3.jpg}
+\includegraphics[width=0.22\textwidth]{figures/idc_indoor/selected/4.jpg}
+& \includegraphics[width=0.19\textwidth]{figures/green_red/selected/1.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/2.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/3.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/4.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/5.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/6.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/7.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/8.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/9.jpg}
+\includegraphics[width=0.19\textwidth]{figures/green_red/selected/10.jpg}
+ \\       
+\end{tabular}
+\caption{Results}
+\end{table*}
 
 Figure \ref{fig:green_red_comparison} shows the comparison of outputs of
 state of the art stitchers with output of our algorithm.
